Added divider line

--- a/app/src/main/res/layout/activity_sub_category.xml
+++ b/app/src/main/res/layout/activity_sub_category.xml
@@ -12,8 +12,8 @@
     <androidx.viewpager.widget.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#DCDCDC"
-        android:id="@+id/view_pager"/>
+        android:id="@+id/view_pager"
+        android:background="#fff"/>
 
 
 </LinearLayout>
