--- a/app/src/main/res/drawable/border_image.xml
+++ b/app/src/main/res/drawable/border_image.xml
@@ -1,7 +1,7 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <stroke android:width="4dp" android:color="#000"/>
+    <stroke android:width="4dp" android:color="#00b100"/>
 
     <corners android:radius="20dp" />
 
