Added functionality to save address

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -17,4 +17,9 @@
         android:id="@+id/action_cart"
         android:icon="@drawable/ic_baseline_shopping_cart_24"
         android:title="Cart"/>
+
+    <item
+        app:showAsAction="never"
+        android:id="@+id/action_logout"
+        android:title="Logout"/>
 </menu>
