--- a/app/src/main/res/layout/row_address_adapter.xml
+++ b/app/src/main/res/layout/row_address_adapter.xml
@@ -1,31 +1,50 @@
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:padding="16dp">
 
 
     <TextView
+        android:id="@+id/text_view_pincode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="20dp" />
+
+
+    <TextView
         android:id="@+id/text_view_street"
-        android:textSize="20dp"/>
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="20dp" />
+
+
+    <TextView
         android:id="@+id/text_view_city"
-        android:textSize="20dp"/>
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="20dp" />
+
+
+    <TextView
         android:id="@+id/text_view_house"
-        android:textSize="20dp"/>
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="20dp" />
+
+
+    <TextView
         android:id="@+id/text_view_type"
-        android:textSize="20dp"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:textSize="20dp"
 
+        />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#dcdcdc" />
 
 </LinearLayout>
