--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content"
         android:hint="Password"
         android:layout_centerInParent="true"
+        android:inputType="textPassword"
         android:layout_below="@id/edit_text_email"
         android:id="@+id/edit_text_password"/>
 
