--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,6 +1,6 @@
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background= "@color/colorPrimary"
+    android:background= "#9dff9d"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
@@ -17,7 +17,7 @@
         android:layout_below="@id/image_view"
         android:layout_centerInParent="true"
         android:text="Grocery app loading..."
-        android:textColor="#fff"
+        android:textColor="#000"
         android:textSize="32dp"/>
 
     <ProgressBar
