--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -3,22 +3,23 @@
     android:background= "#9dff9d"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:id="@+id/image_view"
-        android:layout_centerInParent="true"
-        android:src="@drawable/ic_baseline_shopping_cart_24"/>
+<!--    <ImageView-->
+<!--        android:layout_width="150dp"-->
+<!--        android:layout_height="150dp"-->
+<!--        android:id="@+id/image_view"-->
+<!--        android:layout_centerInParent="true"-->
+<!--        android:src="@drawable/ic_baseline_shopping_cart_24"/>-->
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/image_view"
         android:layout_centerInParent="true"
-        android:text="Grocery app loading..."
-        android:textColor="#000"
-        android:textSize="32dp"/>
+        android:text="Grocery App"
+        android:textAllCaps="true"
+        android:textColor="#fff"
+        android:textSize="32dp"
+        android:textStyle="bold"/>
 
     <ProgressBar
         android:layout_width="wrap_content"
