--- a/app/src/main/res/drawable/ic_baseline_sub_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_sub_24.xml
@@ -1,4 +1,4 @@
-<vector android:height="24dp" android:tint="#FFFFFF"
+<vector android:height="24dp" android:tint="#7CFC00"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white" android:pathData="M19,13H5v-2h14v2z"/>
