--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -1,9 +1,7 @@
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
-
+    <include layout = "@layout/app_bar"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
