--- a/app/src/main/res/layout/row_adapter_cart.xml
+++ b/app/src/main/res/layout/row_adapter_cart.xml
@@ -1,6 +1,7 @@
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
+    android:layout_marginTop="50dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
@@ -42,31 +43,69 @@
         android:text="X"
         android:textSize="20dp"
         android:textStyle="bold"/>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button_add"
-        android:layout_alignParentRight="true"
-        android:text="+"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:layout_below="@id/button_remove"
-        />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button_dec"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/button_add"
-        android:text="-"
-        android:textSize="20dp"
-        android:textStyle="bold"/>
+<!--    <Button-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/button_add"-->
+<!--        android:layout_alignParentRight="true"-->
+<!--        android:text="+"-->
+<!--        android:textSize="20dp"-->
+<!--        android:textStyle="bold"-->
+<!--        android:layout_below="@id/button_remove"-->
+<!--        />-->
+<!--    <Button-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/button_dec"-->
+<!--        android:layout_alignParentRight="true"-->
+<!--        android:layout_below="@id/button_add"-->
+<!--        android:text="-"-->
+<!--        android:textSize="20dp"-->
+<!--        android:textStyle="bold"/>-->
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#dcdcdc"
-        android:layout_below="@id/button_dec"/>
+<!--    <View-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="1dp"-->
+<!--        android:background="#dcdcdc"-->
+<!--        android:id="@+id/border_line"-->
+<!--        android:layout_below="@id/button_dec"/>-->
+
+    <LinearLayout
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="3"
+        android:background="@drawable/button_outline_add"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        >
+
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:id="@+id/button_add"
+
+            android:src="@drawable/ic_baseline_add_24"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="1"
+            android:id="@+id/text_view_item_quantity"
+            android:textColor="#fff"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:background="#008000"/>
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:id="@+id/button_dec"
+            android:src="@drawable/ic_baseline_sub_24"/>
+    </LinearLayout>
 
 
 
