--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20dp"
-        android:text="Subtotal"
+        android:text="Subtotal:"
         android:layout_alignParentLeft="true"
         android:textColor="#000"
         android:textStyle="bold"
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20dp"
-        android:text="Discount"
+        android:text="Discount:"
         android:layout_alignParentLeft="true"
         android:textColor="#000"
         android:textStyle="bold"
@@ -63,7 +63,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20dp"
-        android:text="Total"
+        android:text="Total:"
         android:layout_alignParentLeft="true"
         android:textColor="#000"
         android:textStyle="bold"
@@ -74,8 +74,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/button_checkout"
-        android:text="Checkout"
+        android:text="Continue to address"
+        android:textSize="15dp"
         android:layout_margin="20dp"
+        android:textColor="#fff"
+        android:textStyle="bold"
+        android:background="@drawable/button_rounded"
         android:layout_alignParentBottom="true"/>
 
 
