--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,6 +1,6 @@
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background= "#9dff9d"
+    android:background= "#FF726f"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 <!--    <ImageView-->
