--- a/app/src/main/res/layout/activity_submit_order.xml
+++ b/app/src/main/res/layout/activity_submit_order.xml
@@ -1,8 +1,8 @@
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
+    <include layout = "@layout/app_bar"/>
 
 
     <TextView
@@ -170,10 +170,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/button_submit_order"
-        android:text="Submit"
+        android:text="Submit order"
         android:layout_gravity="bottom"
         android:layout_marginTop="40dp"
-        android:textSize="25dp"/>
+        android:textSize="20dp"
+        android:textAllCaps="false"
+        android:background="@drawable/button_rounded"
+        android:textColor="#fff"/>
 
 
 
