--- a/app/src/main/res/layout/row_adapter_cart.xml
+++ b/app/src/main/res/layout/row_adapter_cart.xml
@@ -9,85 +9,84 @@
         android:layout_height="100dp"
         android:id="@+id/image_view"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"/>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/text_view_cart_name"
-        android:textSize="20dp"
-        android:layout_toLeftOf="@id/button_remove"
-        android:layout_toRightOf="@id/image_view"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/text_view_quant"
-        android:layout_below="@id/text_view_cart_name"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="#000"
+        android:layout_toStartOf="@id/button_remove"
         android:layout_toLeftOf="@id/button_remove"
         android:layout_toRightOf="@id/image_view"
-        />
+        android:layout_toEndOf="@id/image_view"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"/>
+
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/text_view_quant"-->
+<!--        android:textSize="13sp"-->
+<!--        android:layout_toStartOf="@id/button_remove"-->
+<!--        android:layout_toLeftOf="@id/button_remove"-->
+<!--        android:layout_toRightOf="@id/image_view"-->
+<!--        android:layout_toEndOf="@id/image_view"-->
+<!--        android:layout_below="@id/text_view_cart_name"-->
+<!--        android:layout_marginLeft="10dp"-->
+<!--        android:layout_marginStart="10dp"/>-->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/text_view_price"
+        android:textSize="13sp"
+        android:layout_below="@id/text_view_cart_name"
+        android:layout_toStartOf="@id/button_remove"
         android:layout_toLeftOf="@id/button_remove"
         android:layout_toRightOf="@id/image_view"
-        android:layout_below="@id/text_view_quant"/>
+        android:layout_toEndOf="@id/image_view"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:id="@+id/button_remove"
         android:layout_alignParentRight="true"
-        android:text="X"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/ic_baseline_delete_forever_24"
         android:textSize="20dp"
         android:textStyle="bold"/>
-<!--    <Button-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:id="@+id/button_add"-->
-<!--        android:layout_alignParentRight="true"-->
-<!--        android:text="+"-->
-<!--        android:textSize="20dp"-->
-<!--        android:textStyle="bold"-->
-<!--        android:layout_below="@id/button_remove"-->
-<!--        />-->
-<!--    <Button-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:id="@+id/button_dec"-->
-<!--        android:layout_alignParentRight="true"-->
-<!--        android:layout_below="@id/button_add"-->
-<!--        android:text="-"-->
-<!--        android:textSize="20dp"-->
-<!--        android:textStyle="bold"/>-->
+
 
 <!--    <View-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="1dp"-->
 <!--        android:background="#dcdcdc"-->
 <!--        android:id="@+id/border_line"-->
-<!--        android:layout_below="@id/button_dec"/>-->
+<!--        android:layout_below="@id/linear_layout"/>-->
 
     <LinearLayout
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="3"
+        android:id="@+id/linear_layout"
         android:background="@drawable/button_outline_add"
         android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         >
-
 
         <ImageView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:id="@+id/button_add"
-
-            android:src="@drawable/ic_baseline_add_24"/>
+            android:id="@+id/button_dec"
+            android:src="@drawable/ic_baseline_sub_24"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -99,12 +98,13 @@
             android:gravity="center"
             android:textStyle="bold"
             android:background="#008000"/>
+
         <ImageView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:id="@+id/button_dec"
-            android:src="@drawable/ic_baseline_sub_24"/>
+            android:id="@+id/button_add"
+            android:src="@drawable/ic_baseline_add_24"/>
     </LinearLayout>
 
 
