Improved UI for Address

--- a/app/src/main/res/layout/activity_add_address.xml
+++ b/app/src/main/res/layout/activity_add_address.xml
@@ -1,83 +1,144 @@
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:background="#DCDCDC"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <EditText
-        android:layout_width="match_parent"
+    <include layout = "@layout/app_bar"/>
+
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/edit_text_pincode"
-        android:layout_gravity="center"
-        android:textSize="25dp"
-        android:hint="Pincode"/>
+        android:text="Address"
+        android:textStyle="bold"
+        android:textColor="#000"
+        android:textSize="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="20dp"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/edit_text_street"
         android:layout_gravity="center"
-        android:textSize="25dp"
-        android:hint="Street name"/>
-
-
-    <EditText
-        android:layout_width="match_parent"
+        android:textSize="18dp"
+        android:background="#fff"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/edit_text_city"
-        android:layout_gravity="center"
-        android:textSize="25dp"
-        android:hint="City"/>
+        android:text="Apt / Suite#"
+        android:textStyle="bold"
+        android:textColor="#000"
+        android:textSize="20dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="10dp"
+
+        android:layout_marginTop="20dp"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/edit_text_house"
         android:layout_gravity="center"
-        android:textSize="25dp"
-        android:hint="House No"/>
+        android:textSize="18dp"
+        android:background="#fff"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="City"
+        android:textStyle="bold"
+        android:textColor="#000"
+        android:textSize="18dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="10dp"
 
-<!--    <RadioGroup android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="horizontal"-->
-<!--        android:id="@+id/radio_group">-->
-
-<!--        <RadioButton-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Home"-->
-<!--            android:id="@+id/radio_button_home"-->
-<!--            android:onClick="onRadioButtonClicked"/>-->
-<!--        <RadioButton-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Office"-->
-<!--            android:id="@+id/radio_button_office"-->
-<!--            android:onClick="onRadioButtonClicked"/>-->
-<!--        <RadioButton-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Other"-->
-<!--            android:id="@+id/radio_button_other"-->
-<!--            android:onClick="onRadioButtonClicked"/>-->
-
-
-<!--    </RadioGroup>-->
-
+        android:layout_marginTop="20dp"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/edit_text_type"
-        android:hint="Type"
-        android:textSize="20dp"/>
+        android:id="@+id/edit_text_city"
+        android:layout_gravity="center"
+        android:textSize="18dp"
+        android:background="#fff"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Zipcode"
+        android:textStyle="bold"
+        android:textColor="#000"
+        android:textSize="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="20dp"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/edit_text_pincode"
+        android:textSize="18dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="#fff"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Type"
+        android:textStyle="bold"
+        android:textColor="#000"
+        android:textSize="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="20dp"/>
+
+    <RadioGroup android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/radio_group">
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Home"
+            android:id="@+id/radio_button_home" />
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Office"
+            android:id="@+id/radio_button_office" />
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Other"
+            android:id="@+id/radio_button_other" />
+
+
+    </RadioGroup>
+<!--    <EditText-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/edit_text_type"-->
+<!--        android:textSize="20dp"-->
+<!--        android:background="#fff"-->
+<!--        android:layout_marginLeft="10dp"-->
+<!--        android:layout_marginRight="10dp"/>-->
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/button_save"
         android:text="Save"
-        android:textSize="25dp"/>
-
+        android:textAllCaps="false"
+        android:textSize="20dp"
+        android:background="@drawable/button_rounded"
+        android:layout_gravity="bottom"
+        android:layout_marginTop="40dp"/>
 
 
 </LinearLayout>
