--- a/app/src/main/res/layout/activity_address.xml
+++ b/app/src/main/res/layout/activity_address.xml
@@ -4,18 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <include layout="@layout/app_bar" />
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/button_add"
-        android:text="Add new address"
-        android:textAllCaps="false"
-        android:textColor="#fff"
-        android:layout_gravity="center"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/button_rounded"
-        />
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
@@ -23,6 +12,20 @@
         android:id="@+id/recycler_view"/>
 
 
+
+    <TextView
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_add"
+        android:text="Add a new address"
+        android:textAllCaps="false"
+        android:textColor="#000"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
+        android:textStyle="bold"
+        android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
+        android:drawableRight="@drawable/ic_baseline_chevron_right_24"
+        />
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,6 +35,7 @@
         android:textAllCaps="false"
         android:background="@drawable/button_rounded"
         android:textColor="#fff"
+        android:layout_gravity="bottom"
         />
 
 
