--- a/app/src/main/res/layout/row_address_adapter.xml
+++ b/app/src/main/res/layout/row_address_adapter.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="10dp">
 
 
     <TextView
@@ -26,21 +26,21 @@
         android:textSize="20dp" />
 
 
-    <TextView
-        android:id="@+id/text_view_house"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20dp" />
+<!--    <TextView-->
+<!--        android:id="@+id/text_view_house"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:textSize="20dp" />-->
 
 
-    <TextView
-        android:id="@+id/text_view_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:textSize="20dp"
+<!--    <TextView-->
+<!--        android:id="@+id/text_view_type"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_centerInParent="true"-->
+<!--        android:textSize="20dp"-->
 
-        />
+<!--        />-->
 
     <View
         android:layout_width="match_parent"
