--- a/app/src/main/res/layout/activity_address.xml
+++ b/app/src/main/res/layout/activity_address.xml
@@ -23,20 +23,21 @@
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
         android:textStyle="bold"
+        android:textSize="18dp"
         android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
         android:drawableRight="@drawable/ic_baseline_chevron_right_24"
         />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/button_payment"
-        android:text="Continue to payment"
-        android:textSize="20dp"
-        android:textAllCaps="false"
-        android:background="@drawable/button_rounded"
-        android:textColor="#fff"
-        android:layout_gravity="bottom"
-        />
+<!--    <Button-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/button_payment"-->
+<!--        android:text="Continue to payment"-->
+<!--        android:textSize="20dp"-->
+<!--        android:textAllCaps="false"-->
+<!--        android:background="@drawable/button_rounded"-->
+<!--        android:textColor="#fff"-->
+<!--        android:layout_gravity="bottom"-->
+<!--        />-->
 
 
 
