--- a/app/src/main/res/layout/activity_add_address.xml
+++ b/app/src/main/res/layout/activity_add_address.xml
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/edit_text_street"
+        android:padding="3dp"
         android:layout_gravity="center"
         android:textSize="18dp"
         android:background="#fff"
@@ -35,7 +36,6 @@
         android:textSize="20dp"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="10dp"
-
         android:layout_marginTop="20dp"/>
 
     <EditText
@@ -44,6 +44,8 @@
         android:id="@+id/edit_text_house"
         android:layout_gravity="center"
         android:textSize="18dp"
+        android:padding="3dp"
+
         android:background="#fff"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"/>
@@ -53,7 +55,7 @@
         android:text="City"
         android:textStyle="bold"
         android:textColor="#000"
-        android:textSize="18dp"
+        android:textSize="20dp"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="10dp"
 
@@ -64,6 +66,8 @@
         android:id="@+id/edit_text_city"
         android:layout_gravity="center"
         android:textSize="18dp"
+        android:padding="3dp"
+
         android:background="#fff"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"/>
@@ -84,7 +88,9 @@
         android:textSize="18dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:background="#fff"/>
+        android:background="#fff"
+        android:padding="3dp"
+        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -134,6 +140,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/button_save"
         android:text="Save"
+        android:textColor="#fff"
         android:textAllCaps="false"
         android:textSize="20dp"
         android:background="@drawable/button_rounded"
