--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -1,12 +1,30 @@
-<RelativeLayout android:layout_width="match_parent"
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="2"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <include layout = "@layout/app_bar"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/recycler_view"/>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/recycler_view"/>
+
+    </RelativeLayout>
+
+
+
+
+<RelativeLayout
+    android:layout_width="wrap_content"
+    android:layout_height="0dp"
+    android:layout_weight="1">
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -16,8 +34,6 @@
         android:layout_alignParentRight="true"
         android:layout_above="@id/text_view_discount"
         android:id="@+id/text_view_subtotal"/>
-
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -82,6 +98,9 @@
         android:background="@drawable/button_rounded"
         android:layout_alignParentBottom="true"/>
 
-
-
 </RelativeLayout>
+
+
+
+
+</LinearLayout>
