--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,14 +1,26 @@
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:padding="20dp"
+    android:background="#D3D3D3"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Sign in"
+    android:textColor="#000"
+    android:textStyle="bold"
+    android:textSize="32dp"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:padding="10dp"
+        android:background="#fff"
+        android:layout_marginBottom="10dp"
         android:layout_centerInParent="true"
         android:id="@+id/edit_text_email"/>
 
@@ -17,17 +29,41 @@
         android:layout_height="wrap_content"
         android:hint="Password"
         android:layout_centerInParent="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:padding="10dp"
+        android:background="#fff"
         android:inputType="textPassword"
         android:layout_below="@id/edit_text_email"
         android:id="@+id/edit_text_password"/>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/button_login"
-        android:text="Login"
+        android:text="Sign in"
+        android:textColor="#fff"
         android:layout_below="@id/edit_text_password"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/button_rounded"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Don't have an account?"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/button_login"
+        android:id="@+id/text_view_no_account"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Create account"
+        android:id="@+id/text_view_create_account"
+        android:layout_below="@id/button_login"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@id/text_view_no_account"/>
 
 
 
