--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -39,26 +39,37 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/text_view_subtotal"
-            android:text="Subtotal"
+            android:text="Subtotal:"
+            android:textSize="20dp"
             android:layout_marginTop="30dp"
+            android:textColor="#000"
+            android:textStyle="bold"
             android:layout_alignParentLeft="true"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/text_view_discount"
-            android:text="Discount"
+            android:text="Discount:"
             android:layout_marginTop="30dp"
             android:layout_alignParentLeft="true"
-            android:layout_below="@id/text_view_subtotal"/>
+            android:textColor="#000"
+            android:textStyle="bold"
+            android:layout_below="@id/text_view_subtotal"
+            android:textSize="20dp"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/text_view_order_amount"
-            android:text="Order Amount"
+            android:text="Order Amount:"
+            android:textColor="#000"
             android:layout_marginTop="30dp"
             android:layout_alignParentLeft="true"
-            android:layout_below="@id/text_view_discount"/>
+            android:textStyle="bold"
+            android:layout_below="@id/text_view_discount"
+            android:textSize="20dp"
+            />
 
         <Button
             android:layout_width="200dp"
