--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -48,11 +48,45 @@
         android:id="@+id/button_add"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:text="Add"/>
+        android:text="Add"
+        android:textColor="#fff"
+        android:background="@drawable/button_rounded"/>
 
 
 
+    <LinearLayout
+        android:id="@+id/product_add_layout"
+        android:layout_width="120dp"
+        android:layout_height="45dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:visibility="invisible"
+        android:weightSum="3">
 
+        <ImageView
+            android:id="@+id/product_add_image"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/ic_baseline_add_24" />
+
+        <TextView
+            android:id="@+id/product_count"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="0"
+            android:textSize="28sp" />
+
+        <ImageView
+            android:id="@+id/product_sub_image"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/ic_baseline_sub_24" />
+    </LinearLayout>
 
 
 
