--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,42 +3,102 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
+    android:background="#D3D3D3"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Create an account"
+        android:textColor="#000"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:id="@+id/text_view_title"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Name"
-        android:id="@+id/edit_text_name"/>
+        android:id="@+id/edit_text_name"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:padding="10dp"
+        android:background="#fff"
+        android:layout_marginBottom="10dp"
+        android:layout_centerInParent="true"
+        android:layout_below="@id/text_view_title"
+        android:layout_marginTop="30dp"
+
+        />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
         android:layout_below="@id/edit_text_name"
-        android:id="@+id/edit_text_email"/>
+        android:id="@+id/edit_text_email"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:padding="10dp"
+        android:background="#fff"
+        android:layout_marginBottom="10dp"
+        android:layout_centerInParent="true"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/edit_text_email"
         android:hint="Password"
-        android:id="@+id/edit_text_password"/>
+        android:id="@+id/edit_text_password"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:padding="10dp"
+        android:background="#fff"
+        android:layout_marginBottom="10dp"
+        android:layout_centerInParent="true"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Phone"
         android:layout_below="@id/edit_text_password"
-        android:id="@+id/edit_text_phone"/>
+        android:id="@+id/edit_text_phone"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:padding="10dp"
+        android:background="#fff"
+        android:layout_marginBottom="10dp"
+        android:layout_centerInParent="true"/>
 
     <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sign up"
+        android:textSize="20dp"
+        android:textColor="#fff"
+        android:textAllCaps="false"
+        android:layout_marginTop="10dp"
+        android:id="@+id/button_register"
+        android:background="@drawable/button_rounded"
+        android:layout_below="@id/edit_text_phone"
+        />
+
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_below="@id/edit_text_phone"
-        android:text="Register"
-        android:id="@+id/button_register"/>
+        android:text="Already have an account?"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/button_register"
+        android:id="@+id/text_view_no_account"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sign in"
+        android:id="@+id/text_view_sign_in"
+        android:layout_below="@id/button_register"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@id/text_view_no_account"/>
 
 
 
