--- a/app/src/main/res/layout/activity_address.xml
+++ b/app/src/main/res/layout/activity_address.xml
@@ -1,32 +1,50 @@
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:weightSum="2"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <include layout="@layout/app_bar" />
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="1.5"
+    android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/recycler_view"/>
 
+</LinearLayout>
 
 
-    <TextView
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/button_add"
-        android:text="Add a new address"
-        android:textAllCaps="false"
-        android:textColor="#000"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
-        android:drawableRight="@drawable/ic_baseline_chevron_right_24"
-        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/button_add"
+            android:text="Add a new address"
+            android:textAllCaps="false"
+            android:textColor="#000"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
+            android:textStyle="bold"
+            android:textSize="18dp"
+            android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
+            android:drawableRight="@drawable/ic_baseline_chevron_right_24"
+            />
+
+    </LinearLayout>
+
+
 <!--    <Button-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="wrap_content"-->
